@@ -32,7 +32,7 @@
 #define NOFLAG		0x000	/* no flag is set (to be used when a flag must be specified and none is required) */
 #define INTERNAL_MSG	0x001	/* msg generated by logmsgInternal() --> special handling */
 /* NO LONGER USED: #define SYNC_FILE	0x002	/ * do fsync on file after printing */
-#define ADDDATE		0x004	/* add a date to the message */
+#define IGNDATE		0x004	/* ignore, if given, date in message and use date of reception as msg date */
 #define MARK		0x008	/* this message is a mark */
 
 #define MSG_PARSE_HOSTNAME 1
